--- a/public_html/practice.html
+++ b/public_html/practice.html
@@ -17,7 +17,7 @@
         <button id="btn1">show data</button>
         
         <div>
-            <div>输入题目数据（JSON）</div>
+            <div>输入题目数据-----（JSON）</div>
             <textarea id="ta1" style="width: 700px;"></textarea>
             <button id="btn-set-item-data">设置题目数据</button>
         </div>
